# amira-rescoring-service

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Dockerfile  Dockerfile.triton  README.md  SMELLS.md  TODO.md  benchmark_optimizations.py  cerebras.py  debug_environment.py  fix.sh  main.py  profile_compiled.prof  profile_compiled2.prof  profile_e2e.prof  profile_no_grad.prof  pyproject.toml  pytest.ini  test_local_performance.py
.github/workflows/: build.yml  ci.yml  contracts.yml  deploy-gpu.yml  deploy-parallel.yml  deploy.yml  security.yml  test.yml  tests.yml
2025_letter_sound_scoring/: activities.parquet
amira_fe/: blank_detect.proto  blank_detect_grpc.py  blank_detect_pb2.py  blank_detect_pb2_grpc.py  blank_detect_utils.py  difflib_utils.py  errors.py  es_soundex.py  phon_level_alignment.py  phonetic_algorithms_es.py  prod_word_slicing.py  word_level_alignment.py  word_slicing.py
amira_pyutils/: abstract_alignment.py  appsync.py  environment.py  environments.template.yaml  errors.py  functional.py  jsonable.py  language.py  logging.py  mappings.py  phone_alphabets.py  s3.py  text.py  word_distance.py
cdk/: .eslintrc.js  .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/cdk.out/: AmiraLetterScoringStack.assets.json  AmiraLetterScoringStack.template.json  manifest.json  tree.json
cdk/cdk.out/asset.29697d8de172de721e9c4fb119739539966b20f001868ff346d3804c9d31b677/: index.py
cdk/cdk.out/asset.ccfc021278ae47a76b3b33b77aecd60ebeefe21e8efee70e0124562dd5f27f60/: index.py
cdk/lib/: amira-lambda-parallel-stack.d.ts  amira-lambda-parallel-stack.js  amira-lambda-parallel-stack.ts  amira-lambda-parallel-stack.ts.backup  amira-letter-scoring-stack.js  amira-letter-scoring-stack.ts  amira-letter-scoring-stack.ts.backup  cw-agent-config.json
cdk/lib/aspects/: cdk-nag-integration.ts  naming-standards.ts  removal-policy-standards.ts  security-standards.ts
cdk/lib/config/: stages.ts
cdk/lib/constructs/: cross-stack-linking.ts  ecs-cluster.ts  lambda-deployment.ts  networking.ts  observability.ts  parallel-processing-lambda.ts  queueing.ts  storage.ts  triton-service.ts
cdk/lib/utils/: validation.ts
docs/: CONFIGURATION.md  DATA_CONTRACTS.md  DEPLOYMENT.md  DEV.md  High_GRADE_IMPLEMENTATION.md  OIDC_DEPLOYMENTS.md  ROI_TEMPLATE.md  ROLLBACK_CHANGE_REVIEW.md  RUNBOOKS.md  TROUBLESHOOTING.md
docs/dev/: OBSERVABILITY.md  README.md  SMELLS.md  TODO.md
docs/schemas/: activity-results-v1.json  segment-manifest-v1.json
infra/: appsync_utils.py  athena_client.py  contracts.py  s3_client.py  secrets_utils.py  sqs_utils.py
lambda/ecs_drain_on_spot/: index.py
lambda/enqueue_jobs/: index.py
lambda/manual_enqueue/: index.py
lambda/parallel_processor/: Dockerfile  benchmark_cold_start.py  index.py
lambda/slack_notifier/: index.py
my_asr_aligner/: Cargo.toml  OPTIMIZATION_NOTES.md  README.md
my_asr_aligner/benches/: alignment_bench.rs
my_asr_aligner/python/my_asr_aligner/: __init__.py  __init__.pyi
my_asr_aligner/src/: core.rs  decoder.rs  lib.rs  tests.rs
scripts/: athena_staging_cleanup.py  convert_to_safetensors.py  deploy-lambda-parallel.sh  load_driver.py  profile_runner.py  run_load_test.sh  setup_appsync_secrets.py  sqs_redrive_dlq.py  test_cold_start.py  test_slack_notifications.py
src/letter_scoring_pipeline/: config_validator.py  pipeline.py  query.py
src/letter_scoring_pipeline/audio_prep/: __init__.py  engine.py  models.py
src/letter_scoring_pipeline/inference/: __init__.py  constants.py  decoder.py  decoder_wrapper.py  engine.py  metrics_constants.py  models.py  triton_engine.py
src/orf_rescoring_pipeline/: LAMBDA_REFACTORING_PLAN.md  config.py  constants.py  lambda_handler.py  models.py  pipeline.py
src/orf_rescoring_pipeline/alignment/: __init__.py  audio_processing.py  phrase_alignment.py  phrase_manifest.py  word_alignment.py
src/orf_rescoring_pipeline/core/: __init__.py  processor.py
src/orf_rescoring_pipeline/rules/: __init__.py  flagging.py  rescoring.py
src/orf_rescoring_pipeline/services/: kaldi.py  w2v.py
src/orf_rescoring_pipeline/utils/: audio_extraction.py  debug.py  file_operations.py  logging.py  transcription.py
src/pipeline/: config_validator.py  exceptions.py  pipeline.py  query.py  sqs_worker.py  valid_phonetic_elements.json
src/pipeline/audio_prep/: __init__.py  engine.py  models.py
src/pipeline/inference/: __init__.py  constants.py  decoder.py  decoder_wrapper.py  engine.py  metrics_constants.py  models.py  phonetics.py  triton_engine.py
tests/: test_aligner.py  test_aligner_goldens.py  test_audio_io.py  test_contract_activity_results_schema.py  test_contract_segment_manifest_schema.py  test_decoder.py  test_e2e_cpu_with_mocks.py  test_engine_cache_concurrency.py  test_mps_fallback.py  test_phonetics.py  test_pipeline_grouping.py
tests/test_letter_naming/: test_aligner.py  test_aligner_goldens.py  test_appsync_contract.py  test_audio_io.py  test_decoder.py  test_e2e_cpu_placeholder.py  test_e2e_cpu_with_mocks.py  test_engine_cache_concurrency.py  test_engine_imports.py  test_engine_triton_fake.py  test_mps_fallback.py  test_parquet_manifest_contract.py  test_phonetics.py  test_pipeline_grouping.py  test_s3_operations_parsing.py  test_triton_https.py
tests/test_orf_rescoring/: conftest.py  pull_test_activity_data.py  test_file_operations.py  test_flagging.py  test_integration_processor.py  test_phrase_alignment.py  test_phrase_slicing.py  test_rescoring.py  test_word_alignment.py
tests/test_orf_rescoring/input_data/: jane_goodall_bad_needs_rescore.json  jane_goodall_bad_needs_rescore_deepgram_transcript.json  jane_goodall_bad_needs_rescore_timing_deepgram.json  jane_goodall_full_rescore.json  jane_goodall_full_rescore_deepgram_transcript.json  jane_goodall_full_rescore_timing_deepgram.json  (+2 more)
triton_models/w2v2/: README.md  config.pbtxt
utils/: audio.py  audio_metadata.py  cleanup.py  config.py  constants.py  download_audio.py  extract_phrases.py  logging.py  phrase_slicing.py  s3_audio_operations.py  standardized_metrics.py
(+12 files in other folders)
