[project]
name = "amira-letter-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "polars>=0.20.30",
  "loguru>=0.7.2",
  "rich>=14.1.0",
  "pydantic>=2.11.7",
  "aioboto3>=15.1.0",
  "botocore>=1.39.11",
  "numpy>=2.3.2",
  "gql>=4.0.0",
  "pyarrow>=21.0.0",
  "typer>=0.16.1",
  "gevent>=25.5.1",
  "geventhttpclient>=2.3.4",
  "requests-toolbelt>=1.0.0",
  "pydub>=0.25.1",
  "soundfile>=0.13.1",
  "scipy>=1.16.1",
  "line-profiler>=5.0.0",
  "tenacity>=9.0.0",
  "safetensors>=0.4.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
  "transformers>=4.55.3",
]
gpu = [
  "tritonclient>=2.59.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
    "maturin>=1.9.3",
    "types-pyyaml>=6.0.12.20250822",
    "boto3-stubs>=1.40.21",
    "types-aioboto3>=15.1.0",
    "scipy-stubs>=1.16.1.1",
    "types-requests>=2.32.4.20250809",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","PT","RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
plugins = []
